# AuroraExt

./: .gitignore  CONTRIBUTING.md  LICENCE  MOUSECHAT_SETUP.md  PRIVACY.md  README.md  Role Setting@AI-Aurora  TODO.md  bun.lockb  copy-wasm.js  mousechat-debug.md  mousechat-display-fix.md  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts  wxt.config.ts
docs/: browser-support.md  connection-issue.md  environment-check.md  extensions-causing-issue-other-websites.md  index.md  shortcuts.md
docs/.vitepress/: config.mts
docs/features/: internet-search.md  knowledge-base.md  ollama.md  other.md  page-share.md  prompts.md
docs/providers/: llamacpp.md  lmstudio.md  ollama.md  openai.md
docs/sidebar/: chat-with-website.md  copilot.md  index.md  vision.md
src/Wasm-Blockchain/: test-wasm.js  wasm-service.ts
src/Wasm-Blockchain/wasm-crypto/: .eslintrc.cjs  .eslintrc.js  .eslintrc.json  Cargo.toml  README.md  craco.config.js  package.json  tsconfig.json  vite.config.ts
src/Wasm-Blockchain/wasm-crypto/src/: App.test.tsx  App.tsx  lib.rs
src/Wasm-Blockchain/wasm-crypto/src/utils/: mnemonic.ts  wallet.ts
src/Wasm-Blockchain/wasm-crypto/src/wasm/: wallet.ts  wallet_wasm.d.ts
src/assets/: tailwind.css
src/components/: DatabaseDemo.tsx
src/database/: index.ts  schema.ts
src/db/: index.ts  models.ts  openai.ts
src/entries/: background.ts
src/entries-firefox/: background.ts  hf-pull.content.ts  ollama-pull.content.ts
src/hooks/: useEnvironmentCheck.tsx  useI18n.tsx  useLanguage.tsx  useMessage.tsx  useMessageOption.tsx  useSmartScroll.tsx  (+1 more)
(+216 files in other folders)
