[package]
name = "wasm-crypto"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
bip39 = { version = "2.0.0", default-features = false }
sp-core = { version = "18.0.0", default-features = false, features = [
    "full_crypto",
] }
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
secp256k1 = { version = "0.27.0", default-features = false }
web3 = { version = "0.19.0", default-features = false }
hex = "0.4.3"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = ["console"] }
getrandom = { version = "0.2.15", features = ["js"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
